--- a/OpenSea.html
+++ b/OpenSea.html
@@ -223,31 +223,182 @@
             <div class="grid wide">
               <div class="row sm-gutter">
                 <div class="col p-6">
-                  <div class="product-trending">1</div>
+                  <div class="product-trending">
+                    <div class="product-trending-name">COLLECTION</div>
+                    <div class="product-trending-price">
+                      <div class="floor">FLOOR PRICE</div>
+                      <div class="volume">VOLUME</div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col p-6">
-                  <div class="product-trending">2</div>
+                  <div class="product-trending">
+                    <div class="product-trending-name">COLLECTION</div>
+                    <div class="product-trending-price">
+                      <div class="floor">FLOOR PRICE</div>
+                      <div class="volume">VOLUME</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending">3</div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending">4</div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending">5</div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending">6</div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending">7</div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending">8</div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="col p-6">
-                  <div class="product-trending"></div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col p-6 mb-20">
+                  <div class="product-trending">
+                    <div class="product-trending-name">
+                      <span>1</span>
+                      <img
+                        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/e5d317eb-ef35-41c6-a5ae-c488171854f8/dc3vdyo-5e9e614d-ef97-4ba9-b5e6-6c0bd01425ab.jpg/v1/fill/w_1600,h_1132,q_70,strp/dragon_ball_fighterz_all_characters_so_far_by_supersaiyancrash_dc3vdyo-fullview.jpg"
+                        alt=""
+                      />
+                      <span>Hidden Weirdo</span>
+                    </div>
+                    <div class="product-trending-price">
+                      <div class="floor">0.02 ETH</div>
+                      <div class="volume">9.6 ETH</div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
