--- a/OpenSea.html
+++ b/OpenSea.html
@@ -14,104 +14,107 @@
     <link rel="stylesheet" href="./OpenSea.css" />
   </head>
   <body>
+    <div class="headposfix"></div>
+
     <div class="app">
-      <header>
-        <div class="head-top">
-          <div class="Logo">
-            <img
-              src="https://opensea.io/static/images/logos/opensea.svg"
-              alt=""
-            />
-            <span>OpenSea</span>
-          </div>
-          <div class="search">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="search" placeholder="search game" id="valueInput" />
-          </div>
-          <div class="top-nav-right">
-            <ul class="content">
-              <li class="Drops">
-                Drops
-                <div class="Drops_list Dark">
-                  <div class="Drops_element">Calendar</div>
-                  <div class="Drops_element">Learn more</div>
-                </div>
-              </li>
-              <li class="Stats">
-                Stats
-                <div class="Stats_list Dark">
-                  <div class="Stats_element">Ranking</div>
-                  <div class="Stats_element">Activity</div>
-                </div>
-              </li>
-              <li class="Resources">
-                Resources
-                <div class="Resources_list Dark"></div>
-              </li>
-            </ul>
-            <ul class="infor">
-              <li class="User Language">
-                <i class="fa-regular fa-circle-user"></i>
-                <div class="Language_list">
-                  <div class="Language_element backLanguage">
-                    <i class="fa-solid fa-arrow-left"></i>Choose Language
-                  </div>
-                  <div class="Language_element">
-                    English
-                    <div class="language-icon">
-                      <i class="fa-solid fa-check"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="User_list Dark">
-                  <div class="User_element">
-                    <i class="fa-solid fa-user"></i>Profile
-                  </div>
-                  <div class="User_element">
-                    <i class="fa-regular fa-heart"></i>Valorites
-                  </div>
-                  <div class="User_element">
-                    <i class="fa-solid fa-eye"></i>Watchlist
-                  </div>
-                  <div class="User_element">
-                    <i class="fa-solid fa-table"></i>My Collections
-                  </div>
-                  <div class="User_element">
-                    <i class="fa-solid fa-pen"></i>Create
-                  </div>
-                  <div class="User_element">
-                    <i class="fa-solid fa-gear"></i>Settings
-                  </div>
-                  <div
-                    class="User_element tranlateLanguage"
-                    style="
-                      display: flex;
-                      justify-content: space-between;
-                      align-items: center;
-                    "
-                  >
-                    <div><i class="fa-solid fa-globe"></i>Language</div>
-                    <p>
-                      <sub>en<i class="fa-solid fa-chevron-right"></i></sub>
-                    </p>
-                  </div>
-                  <div class="User_element night_mode">
-                    <span class="iconsun"><i class="fa-solid fa-sun"></i></span>
-                    <span class="iconmoon"
-                      ><i class="fa-solid fa-moon"></i
-                    ></span>
-                    Night mode
-                    <div class="toggle_night">
-                      <div class="night_box"></div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li><i class="fa-sharp fa-regular fa-cart-shopping"></i></li>
-              <li><i class="fa-solid fa-wallet" title="wallet"></i></li>
-            </ul>
-          </div>
+      <!-- ========================================================= -->
+      <div class="head-top">
+        <div class="Logo">
+          <img
+            src="https://opensea.io/static/images/logos/opensea.svg"
+            alt=""
+          />
+          <span>OpenSea</span>
         </div>
+        <div class="search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input type="search" placeholder="search game" id="valueInput" />
+        </div>
+        <div class="top-nav-right">
+          <ul class="content">
+            <li class="Drops">
+              Drops
+              <div class="Drops_list Dark">
+                <div class="Drops_element">Calendar</div>
+                <div class="Drops_element">Learn more</div>
+              </div>
+            </li>
+            <li class="Stats">
+              Stats
+              <div class="Stats_list Dark">
+                <div class="Stats_element">Ranking</div>
+                <div class="Stats_element">Activity</div>
+              </div>
+            </li>
+            <li class="Resources">
+              Resources
+              <div class="Resources_list Dark"></div>
+            </li>
+          </ul>
+          <ul class="infor">
+            <li class="User Language">
+              <i class="fa-regular fa-circle-user"></i>
+              <div class="Language_list">
+                <div class="Language_element backLanguage">
+                  <i class="fa-solid fa-arrow-left"></i>Choose Language
+                </div>
+                <div class="Language_element">
+                  English
+                  <div class="language-icon">
+                    <i class="fa-solid fa-check"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="User_list Dark">
+                <div class="User_element">
+                  <i class="fa-solid fa-user"></i>Profile
+                </div>
+                <div class="User_element">
+                  <i class="fa-regular fa-heart"></i>Valorites
+                </div>
+                <div class="User_element">
+                  <i class="fa-solid fa-eye"></i>Watchlist
+                </div>
+                <div class="User_element">
+                  <i class="fa-solid fa-table"></i>My Collections
+                </div>
+                <div class="User_element">
+                  <i class="fa-solid fa-pen"></i>Create
+                </div>
+                <div class="User_element">
+                  <i class="fa-solid fa-gear"></i>Settings
+                </div>
+                <div
+                  class="User_element tranlateLanguage"
+                  style="
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                  "
+                >
+                  <div><i class="fa-solid fa-globe"></i>Language</div>
+                  <p>
+                    <sub>en<i class="fa-solid fa-chevron-right"></i></sub>
+                  </p>
+                </div>
+                <div class="User_element night_mode">
+                  <span class="iconsun"><i class="fa-solid fa-sun"></i></span>
+                  <span class="iconmoon"><i class="fa-solid fa-moon"></i></span>
+                  Night mode
+                  <div class="toggle_night">
+                    <div class="night_box"></div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li><i class="fa-sharp fa-regular fa-cart-shopping"></i></li>
+            <li><i class="fa-solid fa-wallet" title="wallet"></i></li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- ========================================================= -->
+      <header>
         <div class="head-bot">
           <ul class="bot-nav"></ul>
         </div>
@@ -138,6 +141,8 @@
           </div>
         </div>
       </header>
+
+      <!-- ========================================================= -->
       <div class="bgmain">
         <main>
           <section class="main-title">
@@ -176,20 +181,22 @@
           <section class="showproduct"></section>
         </main>
       </div>
+
+      <!-- ========================================================= -->
       <footer>
         <div class="app">
           <div class="footter-first">
             <div class="grid wide">
-              <div class="row sm-gutter">
+              <div class="row big-gutter footer-top">
                 <div class="col p-6">
                   <div class="foot__left">
-                    <h5>Stay in the loop</h5>
+                    <h4>Stay in the loop</h4>
                     <p>
                       Join our mailing list to stay in the loop with our newest
                       feature releases, NFT drops, and tips and tricks for
                       navigating OpenSea.
                     </p>
-                    <div class="login">
+                    <div class="footer-login">
                       <input type="gmail" placeholder="Your email address" />
                       <button>Sign up</button>
                     </div>
@@ -197,7 +204,7 @@
                 </div>
                 <div class="col p-6">
                   <div class="foot__right">
-                    <h5>Join the community</h5>
+                    <h4>Join the community</h4>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-github-alt"></i></a>
@@ -207,7 +214,8 @@
                   </div>
                 </div>
               </div>
-              <div class="row sm-gutter">
+              <hr />
+              <div class="row sm-gutter footer-middle">
                 <div class="col p-4">
                   <div class="Logo">
                     <img
@@ -222,20 +230,40 @@
                     discover exclusive digital items.
                   </p>
                 </div>
-                <div class="col p-2 endfoot1"></div>
-                <div class="col p-2 endfoot5">
-                  <div class="endfoot2"></div>
+                <div class="col p-2 endfoot1 endfoot"></div>
+                <div class="col p-2 endfoot5 endfoot">
+                  <div class="endfoot2 endfoot"></div>
                 </div>
-                <div class="col p-2 endfoot3"></div>
-                <div class="col p-2 endfoot6">
-                  <div class="endfoot4"></div>
+                <div class="col p-2 endfoot3 endfoot"></div>
+                <div class="col p-2 endfoot6 endfoot">
+                  <div class="endfoot4 endfoot"></div>
                 </div>
               </div>
+              <hr />
+            </div>
+            <div class="footerbot">
+              <p>&copy 2003 - 2023 Ozone Networks, Inc</p>
+              <p>Privacy Policy <span>Terms of Service</span></p>
             </div>
           </div>
         </div>
       </footer>
     </div>
+
+    <!-- ========================================================= -->
+    <div class="gallery">
+      <div class="close"><i class="bx bxs-x-circle"></i></div>
+      <div class="gallery__inner">
+        <div class="from-box"><p>text</p></div>
+      </div>
+      <div class="control prev">
+        <i class="bx bxs-chevron-left"></i>
+      </div>
+      <div class="control next">
+        <i class="bx bxs-chevron-right"></i>
+      </div>
+    </div>
+
     <script src="./NhungHTML.js"></script>
     <script src="./Oepnsea.js"></script>
   </body>
