--- a/OpenSea.html
+++ b/OpenSea.html
@@ -9,9 +9,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./responsive.css" />
-    <link rel="stylesheet" href="./grid.css" />
-    <link rel="stylesheet" href="./OpenSea.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style/grid.css" />
+    <link rel="stylesheet" href="./style/responsive.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <div class="headposfix"></div>
@@ -98,9 +104,12 @@
                   </p>
                 </div>
                 <div class="User_element night_mode">
-                  <span class="iconsun"><i class="fa-solid fa-sun"></i></span>
-                  <span class="iconmoon"><i class="fa-solid fa-moon"></i></span>
-                  Night mode
+                  <span class="iconsun"
+                    ><i class="fa-solid fa-sun"></i> Night mode</span
+                  >
+                  <span class="iconmoon"
+                    ><i class="fa-solid fa-moon"></i> Night mode</span
+                  >
                   <div class="toggle_night">
                     <div class="night_box"></div>
                   </div>
@@ -144,24 +153,24 @@
 
       <!-- ========================================================= -->
       <div class="bgmain">
-        <main>
-          <section class="main-title">
-            <div class="select-left">
-              <h2 class="select-leftactive">Trending</h2>
+        <main class="mt-2">
+          <section class="main-select mb-5">
+            <div class="main-select-left">
+              <h2 class="select-leftactive mr-4">Trending</h2>
               <h2>Top</h2>
             </div>
-            <div class="select-right">
-              <div class="select-time">
+            <div class="main-select-right">
+              <div class="main-select-right-time">
                 <div class="time-button time-buttonactive">1h</div>
                 <div class="time-button">6h</div>
                 <div class="time-button">24h</div>
                 <div class="time-button">7d</div>
               </div>
-              <div class="select-chains">
+              <div class="main-select-right-chains pt-2 pb-2">
                 <span>All Chains</span>
                 <i class="fa-sharp fa-solid fa-chevron-down"></i>
               </div>
-              <div class="select-view">View all</div>
+              <div class="main-select-right-view pt-2 pb-">View all</div>
             </div>
           </section>
 
@@ -185,25 +194,25 @@
       <!-- ========================================================= -->
       <footer>
         <div class="app">
-          <div class="footter-first">
+          <div>
             <div class="grid wide">
-              <div class="row big-gutter footer-top">
+              <div class="row big-gutter footer-top pt-4 pb-4">
                 <div class="col p-6">
-                  <div class="foot__left">
+                  <div class="footer-top-left">
                     <h4>Stay in the loop</h4>
-                    <p>
+                    <p style="font-size: 16px">
                       Join our mailing list to stay in the loop with our newest
                       feature releases, NFT drops, and tips and tricks for
                       navigating OpenSea.
                     </p>
-                    <div class="footer-login">
+                    <div class="footer-top-left-login df">
                       <input type="gmail" placeholder="Your email address" />
-                      <button>Sign up</button>
+                      <button class="ml-2">Sign up</button>
                     </div>
                   </div>
                 </div>
                 <div class="col p-6">
-                  <div class="foot__right">
+                  <div class="footer-top-right">
                     <h4>Join the community</h4>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -215,7 +224,7 @@
                 </div>
               </div>
               <hr />
-              <div class="row sm-gutter footer-middle">
+              <div class="row sm-gutter footer-middle pt-4 pb-4">
                 <div class="col p-4">
                   <div class="Logo">
                     <img
@@ -230,18 +239,18 @@
                     discover exclusive digital items.
                   </p>
                 </div>
-                <div class="col p-2 endfoot1 endfoot"></div>
-                <div class="col p-2 endfoot5 endfoot">
-                  <div class="endfoot2 endfoot"></div>
+                <div class="col p-2 endfoot1 mb-5"></div>
+                <div class="col p-2 endfoot5 mb-5">
+                  <div class="endfoot2 mb-5"></div>
                 </div>
-                <div class="col p-2 endfoot3 endfoot"></div>
-                <div class="col p-2 endfoot6 endfoot">
-                  <div class="endfoot4 endfoot"></div>
+                <div class="col p-2 endfoot3 mb-5"></div>
+                <div class="col p-2 endfoot6 mb-5">
+                  <div class="endfoot4 mb-5"></div>
                 </div>
               </div>
               <hr />
             </div>
-            <div class="footerbot">
+            <div class="footer-bot pt-3 pb-3">
               <p>&copy 2003 - 2023 Ozone Networks, Inc</p>
               <p>Privacy Policy <span>Terms of Service</span></p>
             </div>
@@ -251,19 +260,19 @@
     </div>
 
     <!-- ========================================================= -->
-    <div class="gallery">
-      <div class="close"><i class="bx bxs-x-circle"></i></div>
-      <div class="gallery__inner">
-        <div class="from-box"><p>text</p></div>
-      </div>
-      <div class="control prev">
-        <i class="bx bxs-chevron-left"></i>
-      </div>
-      <div class="control next">
-        <i class="bx bxs-chevron-right"></i>
+    <div class="galleryUser">
+      <div class="galleryUser-inner">
+        <div class="galleryUser-inner-head">
+          <h5 style="color: #fff; text-align: center">Connect your wallet</h5>
+          <p style="color: #818991; text-align: center">
+            If you don't have a wallet, you can select a provider and create one
+            now. <a href="#" style="color: #206ab4">Learn more</a>
+          </p>
+        </div>
+        <div class="galleryUser-inner-list"></div>
+        <button class="galleryUser-inner-show">Show more</button>
       </div>
     </div>
-
     <script src="./NhungHTML.js"></script>
     <script src="./Oepnsea.js"></script>
   </body>
