--- a/OpenSea.html
+++ b/OpenSea.html
@@ -34,7 +34,14 @@
         </div>
         <div class="search">
           <i class="fa-solid fa-magnifying-glass"></i>
-          <input type="search" placeholder="search game" id="valueInput" />
+          <input
+            name="search"
+            type="text"
+            placeholder="search game"
+            id="valueInput"
+          />
+          <i class="fa-solid fa-xmark close" style="display: none"></i>
+          <div class="search-history"></div>
         </div>
         <div class="top-nav-right">
           <ul class="content">
